<resources>
    <string name="app_name">The Barking Lot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">The Barking Lot logo</string>
    <string name="kitten_img_desc">Cartoon image of a kitten</string>
    <string name="cat_img_desc">Cartoon image of a cat</string>
    <string name="elderly_cat_img_desc">Cartoon image of an elderly cat</string>
    <string name="puppy_img_desc">Cartoon image of a puppy</string>
    <string name="dog_img_desc">Cartoon image of a dog</string>
    <string name="elderly_dog_img_desc">Cartoon image of an elderly dog</string>
    <string name="misc_pet_img_desc">Cartoon image of a rabbit, snake, and fish</string>
    <string name="default_pet_img_desc">Outline of a cat\'s head with question mark on it</string>
    <string name="expert_pet_img_desc">Cartoon image of a cat wearing glasses and a tie</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="instagram_logo">Instagram logo</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="website_logo">Website logo</string>
    <string name="home_img">Cartoon image of a dog and a girl hugging</string>
    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_survey">PetMatcher Quiz</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_credits">Credits</string>
    <string name="home_intro">Who We Are</string>
    <string name="mission_statement">The Barking Lot is a volunteer-run pet rescue. We take in
        animals of all kinds and strive to find each and every one of them a home!</string>
    <string name="foster_subtitle">If you\'re here to foster…</string>
    <string name="foster_message">Then thank you for considering it! Fostering is very important,
        and saves countless pets daily. By doing so you\'re helping all kinds of animals find safe and happy homes!</string>
    <string name="foster_button">Read more about fostering</string>
    <string name="foster_link">https://ontariospca.ca/adopt/become-a-foster-family/</string>
    <string name="adopt_subtitle">If you\'re here to adopt…</string>
    <string name="adopt_message">Then thank you for adopting, not shopping! Stop puppy mills,
        inhumane breeders, and exotic pet dealers by adopting the animals that are already here and need you.</string>
    <string name="adopt_button">See who\'s ready for adoption</string>
    <string name="adopt_link">https://www.adoptapet.com/</string>
    <string name="social_media">Find us online!</string>
    <string name="donation_title">We hate to ask but…</string>
    <string name="donation_message">We\'re a volunteer run organization that is funded exclusively
        by donations. If you\'re able, consider donating to support us!</string>
    <string name="donate_button">Donate</string>
    <string name="donate_link">https://ontariospca.ca/how-to-help/other-ways-to-donate/</string>
    <string name="event_title">Did you know?</string>
    <string name="event_message">We hold adoption events monthly! Come see who\'s ready for a
        forever home, chat with other pet owners, and enter draws for prizes! The next event is Saturday Dec. 18!</string>
    <string name="event_button">Add to calendar</string>
    <string name="event_link">EVENT_LINK</string>
    <string name="invite_title">Spread the word!</string>
    <string name="invite_message">Know someone looking for a new friend? Invite someone to come along to the next adoption event!</string>
    <string name="invite_button">Pick a friend</string>
    <string name="invite_link">INVITE_LINK</string>
    <string name="invite_body">Check out this adoption event from The Barking Lot! https://www.stclaircollege.ca/events</string>
    <string name="contact_message">Have questions?</string>
    <string name="contact_message_2">Give us a shout!</string>
    <string name="phone_button">Call now</string>
    <string name="phone_number">123–456–7890</string>
    <string name="email_button">Email now</string>
    <string name="email_address">contact@thebarkinglot.ca</string>
    <string name="address_message">Come visit!</string>
    <string name="street_address">123 Barking Lot Lane, Elmira, Ontario</string>
    <string name="map_button">View on map</string>
    <string name="foster_app_title">Want to become a foster family?</string>
    <string name="foster_app_message">Fill out this survey:</string>
    <string name="application_button">Begin</string>
    <string name="form_title">Foster Application Form</string>
    <string name="form_fname">First Name</string>
    <string name="form_lname">Last Name</string>
    <string name="form_email">Email Address</string>
    <string name="form_phone">Phone Number</string>
    <string name="form_petField">Which pets are you looking to foster:</string>
    <string name="form_experience">Please list previous fostering experience (if any):</string>
    <string name="form_button">Submit</string>
    <string name="main_credit">Thank you to Emily for providing her fostering expertise!</string>
    <string name="assets_credit">Assets</string>
    <string name="my_assets">All other assets made by me</string>
    <string name="facebook_asset">Facebook logo from the Facebook logo pack</string>
    <string name="instagram_asset">Instagram logo from the Instagram logo pack</string>
    <string name="twitter_asset">Twitter logo from the Twitter logo pack</string>
    <string name="resource1">Emergency Animal Hospitals</string>
    <string name="resourceLink1">emergency+animal+hospital</string>
    <string name="resource2">Veterinary Clinics</string>
    <string name="resourceLink2">vet+clinic+near+me</string>
    <string name="resource3">Grooming Services</string>
    <string name="resourceLink3">pet+grooming+near+me</string>
    <string name="resource4">Supply Retailers</string>
    <string name="resourceLink4">+supplies+near+me</string>
    <string name="resource5">Boarding Services</string>
    <string name="resourceLink5">+boarding+near+me</string>
    <string name="resource6">Animal Information</string>
    <string name="hours_header">How much attention do they need?</string>
    <string name="activity_header">How active are they?</string>
    <string name="experience_header">Are they difficult to care for?</string>
    <string name="enclosure_header">Do they need a cage/tank/terrarium?</string>
    <string name="outdoor_header">Do they need outdoor space?</string>
    <string name="companion_header">What kind of friend am I getting?</string>
    <string name="grooming_header">How much upkeep do they need?</string>
    <string name="kitten">Kittens</string>
    <string name="kitten_hours">Kittens shouldn\'t be left unsupervised for long periods of time.
        They can get into all kinds of trouble and they can get into all kinds of small places.</string>
    <string name="kitten_activity">They don\'t need a lot of strenuous activity, like walking or
        playing, but they can be a lot to keep up with and a close eye should be kept on them.</string>
    <string name="kitten_experience">Taking care of a kitten is more work than that of an adult cat,
        but if they\'re healthy and well tempered taking care of them shouldn\'t be very demanding.
        There\'s always lots of resources to help new owners too.</string>
    <string name="kitten_enclosure">Cats generally don\'t need dedicated cages, but kittens need to
        have somewhere they can be kept while you\'re away or sleeping. Keeping them in one room
        usually works just fine, like a bathroom where they can\'t get in to a lot of trouble,
        or a single bedroom with the door closed.</string>
    <string name="kitten_outdoor">It\'s dangerous for cats to be let outdoors, and doubly so for kittens. Unless you\'re
        keeping them on a leash, they should be indoors.</string>
    <string name="kitten_companion">Kittens are more active and playful when they\'re younger, and
        tend to mellow out with age.</string>
    <string name="kitten_grooming">Kittens very rarely need to be bathed but after 3 months old,
        brushing should be a regular occurrence. As they get older they\'ll need the occasional
        teeth cleaning and nail trimming.</string>
    <string name="cat_adult">Adult Cats</string>
    <string name="cat_adult_hours">Unless your cat is particularly aloof, you should be spending
        some time with them, but you probably don\'t need to go out of your way to set aside the time.</string>
    <string name="cat_adult_activity">Fully grown cats tend to be very low maintenance. They might
        be willing to play for a little, but they can usually keep themselves entertained.</string>
    <string name="cat_adult_experience">An adult cat is usually a very low maintenance pet and
        there\'s a lot of resources for beginners.</string>
    <string name="cat_adult_enclosure">Adult cats don\'t need a dedicated enclosure. They might get
        in to some trouble, but that just comes with having a pet.</string>
    <string name="cat_adult_outdoor">It\'s dangerous for cats to be let outdoors. Unless you\'re
        keeping them on a leash, they should be indoors.</string>
    <string name="cat_adult_companion">Some cats are very aloof and some are very cuddly. It\'s
        important to ask about their temperament or spend some time getting to know them before you
        make a decision to bring them home.</string>
    <string name="cat_adult_grooming">It\'s very rare to need to bathe a cat. Usually all they
        need is regular brushing, nail trimming, and the occasional tooth cleaning.</string>
    <string name="cat_elderly">Elderly Cats</string>
    <string name="cat_elderly_hours">An elderly cat is probably going to be very low energy.
        If you pay attention to them when they ask, they\'ll probably be happy.</string>
    <string name="cat_elderly_activity">An elderly cat isn\'t going to need hardly any regular
        activity. Maybe get a laser pointer and see if they feel like chasing it.</string>
    <string name="cat_elderly_experience">Cats are overall a fairly easy pet for beginners,
        but as they age more attention needs to be paid to their health. Joints, teeth, diet and
        other factors can all impact how much work they are going to be as they age.</string>
    <string name="cat_elderly_enclosure">Elderly cats don\'t need dedicated enclosures. They\'re generally
        more low-energy and won\'t get into as much trouble.</string>
    <string name="cat_elderly_outdoor">It\'s dangerous for cats to be let outdoors. Unless you\'re
        keeping them on a leash, they should be indoors.</string>
    <string name="survey_title">Welcome to the PetMatcher Quiz!</string>
    <string name="survey_para_1">Not sure what kind of furry (or not) friend you\'re looking for?
        Let us help you decide! Take this quiz for a quick look at who might suit your lifestyle.\n\n
        Keep in mind this is just a recommendation, and all pets have their own personalities and
        quirks. Contact us to talk to a volunteer and see who they think would suit you!</string>
    <string name="quiz_start_button">Begin the quiz</string>
    <string name="animations_title">Animations</string>
    <string name="animations_summary">Toggle animations</string>
    <string name="pet_pref_title">Pet Preference</string>
    <string name="pet_pref_summary">Select the type of pet you want to get results for in the Resources tab</string>
</resources>