<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/animations_menu"
            app:entryValues="@array/animations_value"
            app:key="animationsMenu"
            app:summary="@string/animations_summary"
            app:title="@string/animations_title" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="pet"
            app:entries="@array/pet_menu"
            app:entryValues="@array/pet_value"
            app:key="petMenu"
            app:summary="@string/pet_pref_summary"
            app:title="@string/pet_pref_title"/>

    </PreferenceCategory>

</PreferenceScreen>

<!-- TODO - COMPLETE SETTINGS -->