<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ashleymccallum.thebarkinglot.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.ashleymccallum.thebarkinglot.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_survey"
        android:name="com.ashleymccallum.thebarkinglot.SurveyFragment"
        android:label="@string/menu_survey"
        tools:layout="@layout/fragment_survey" >
        <action
            android:id="@+id/action_nav_survey_to_petSurveyFragment"
            app:destination="@id/nav_pet_survey" />
    </fragment>
    <fragment
        android:id="@+id/nav_resources"
        android:name="com.ashleymccallum.thebarkinglot.ResourcesFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/nav_credits"
        android:name="com.ashleymccallum.thebarkinglot.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/nav_pet_survey"
        android:name="com.ashleymccallum.thebarkinglot.PetSurveyFragment"
        android:label="@string/menu_survey"
        tools:layout="@layout/fragment_pet_survey" />
</navigation>